Fixed nested text on mobile.

--- a/public/type.css
+++ b/public/type.css
@@ -16,7 +16,7 @@ html {
     font-size: 2.25vw;
   }
   a, p, span {
-    font-size: 2em;
+    font-size: 2rem;
   }
 }
 @media only screen and (max-height: 360px) {
